@@ -4,7 +4,7 @@
 from distutils.core import setup
 
 
-VERSION = "1.36"
+VERSION = "1.37"
 
 
 classifiers = [
